--- a/src/index.css
+++ b/src/index.css
@@ -17,14 +17,77 @@ body{
     background: linear-gradient(#F4F0FF, #DACDFF);
 } 
 
+#chatbot-toggler {
+    position: fixed;
+    bottom: 45px;
+    right: 485px;
+    border: none;
+    height: 50px;
+    width: 50px;
+    cursor: pointer;
+    border-radius: 50%;
+    background: #6D4FC2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.para{
+    position: fixed;
+    bottom: 45px;
+    right: 410px;
+    border: none;
+    height: 50px;
+    width: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 15px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
+
+.none{
+    display: none;
+}
+
+
+#chatbot-toggler span {
+    position: absolute;
+    color: #fff;
+}
+
+.container.show-chatbot #chatbot-toggler{
+    transform: rotate(90deg);
+}
+
+#chatbot-toggler span:last-child,
+.container.show-chatbot #chatbot-toggler span:first-child {
+    opacity: 0;
+}
+
+.container.show-chatbot #chatbot-toggler span:last-child {
+    opacity: 1;
+}
+
 .chatbot-popup{
     position: relative;
+    opacity: 0;
+    pointer-events: none;
     width: 420px;
     overflow: hidden;
+    transform: scale(1);
+    transform-origin: bottom right;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 0 128px 0 rgba(0, 0, 0, 0.1),
       0 32px 64px -48px rgba(0, 0, 0, 0.5);
+    transition: all 0.3s ease;
+}
+
+.container.show-chatbot .chatbot-popup{
+    opacity: 1;
+    pointer-events: auto;
 }
 
 .chatbot-popup .chatbot-header{
@@ -189,3 +252,32 @@ body{
 .chat-form .message-input:valid~button{
     display: block;
 }
+
+@media (max-width: 520px){
+    #chatbot-toggler{
+        right: 20px;
+        bottom: 20px;
+    }
+
+    .chatbot-popup{
+        right: 0;
+        bottom: 0;
+        height: 100%;
+        border-radius: 0;
+        width: 100%;
+    }
+
+    .chatbot-popup .chatbot-header{
+        padding: 12px 15px;
+    }
+
+    .chatbot-body{
+        height: calc(90% - 55px);
+        padding: 25px 15px;
+    }
+
+    .chat-footer{
+        padding: 10px 15px 15px;
+    }
+}
+
